# CanLogAnalyzer

./: AppTranslator.cpp  AppTranslator.h  CMakeLists.txt  CsvExporter.cpp  CsvExporter.h  LICENSE  LogEntry.h  LogFilterProxyModel.cpp  LogFilterProxyModel.h  LogParser.cpp  LogParser.h  LogStatistics.cpp  LogStatistics.h  LogTableModel.cpp  LogTableModel.h  MainWindow.cpp  MainWindow.h  README.md  main.cpp
Forms/: MainWindow.ui
sample_logs/: Testlog_24.01.2024.txt
